<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".auth.SignUp">

    <View
        android:id="@+id/view"
        android:layout_width="0dp"
        android:layout_height="140dp"
        android:background="@color/blue_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view2"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:background="@drawable/wave"
        android:backgroundTint="@color/blue_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view" />


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="65dp"
        android:layout_height="75dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/signup"
        app:tint="@color/white" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="225dp"
        android:layout_height="wrap_content"
        android:text="@string/signup_caption"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toTopOf="@+id/imageView2" />

    <EditText
        android:id="@+id/editTextName"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:background="@drawable/round_field"
        android:drawableStart="@drawable/user_small"
        android:drawablePadding="10dp"
        android:drawableTint="@color/blue_bar"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="text"
        android:padding="14dp"
        android:textColor="@color/blue_bar"
        android:textColorHint="@color/blue_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view2" />

    <EditText
        android:id="@+id/editTextEmailAddress_signup"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:background="@drawable/round_field"
        android:drawableStart="@android:drawable/sym_action_email"
        android:drawablePadding="10dp"
        android:drawableTint="@color/gray"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="14dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextName" />

    <EditText
        android:id="@+id/editTextPassword_signup"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:background="@drawable/round_field2"
        android:drawableStart="@android:drawable/ic_lock_idle_lock"
        android:drawablePadding="15dp"
        android:drawableTint="@color/gray"
        android:ems="10"
        android:hint="@string/pass"
        android:inputType="textPassword"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="@+id/editTextEmailAddress_signup"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editTextEmailAddress_signup"
        app:layout_constraintTop_toBottomOf="@+id/editTextEmailAddress_signup" />

    <Button
        android:id="@+id/btn_signup"
        android:layout_width="280dp"
        android:layout_height="48dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/round_field"
        app:backgroundTint="@color/gray"
        android:text="@string/signup"
        android:textStyle="bold"
        android:textSize="15sp"
        android:clickable="true"
        app:layout_constraintEnd_toEndOf="@+id/editTextPassword_signup"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editTextPassword_signup"
        app:layout_constraintTop_toBottomOf="@+id/editTextPassword_signup"
        android:focusable="true" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="!"
        android:textColor="@color/white"
        android:textSize="60sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/textView5"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toTopOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/or"
        app:layout_constraintEnd_toEndOf="@+id/btn_signup"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="@+id/btn_signup"
        app:layout_constraintTop_toBottomOf="@+id/btn_signup" />

    <ImageView
        android:id="@+id/google_signup"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="@+id/textView7"
        app:layout_constraintStart_toStartOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        app:srcCompat="@drawable/google_icon" />

    <TextView
        android:id="@+id/login_signup"
        android:layout_width="202dp"
        android:layout_height="38dp"
        android:layout_marginTop="20dp"
        android:text="@string/login_signup"
        android:textSize="17sp"
        android:textStyle="bold"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="@+id/btn_signup"
        app:layout_constraintStart_toStartOf="@+id/btn_signup"
        app:layout_constraintTop_toBottomOf="@+id/google_signup" />


</androidx.constraintlayout.widget.ConstraintLayout>